--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       {% block title %}
-        <h1><a href="/">{{ title }}</a></h1>
+        <h1><a class="bare" href="/">{{ title }}</a></h1>
       {% endblock %}
     </header>
 
