--- a/public/css/universal.css
+++ b/public/css/universal.css
@@ -10,10 +10,14 @@ h1 {
   margin-top: 0;
 }
 
-h1 > a,
-h1 > a:focus,
-h1 > a:hover,
-h1 > a:active {
+a.large {
+  font-size: 1.25em;
+}
+
+a.bare,
+a.bare:focus,
+a.bare:hover,
+a.bare:active {
   color: inherit;
   text-decoration: none;
 }
@@ -70,9 +74,19 @@ table#columns tr td {
 }
 
 table#data-rows tr th {
-  text-align: center;
+  text-align: left;
   border-bottom: 1px solid black;
   font-variant: small-caps;
+}
+
+table#data-rows tr th:nth-last-child(1),
+table#data-rows tr th:nth-last-child(2) {
+  border: none;
+}
+
+table#data-rows tr td:nth-last-child(1),
+table#data-rows tr td:nth-last-child(2) {
+  text-align: right;
 }
 
 table#data-rows tr td {
