--- a/templates/edit-table.html
+++ b/templates/edit-table.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <section id="create">
-    <form action="./{% if editRecord %}edit{% else %}create{% endif %}" method="POST">
+    <form action="./{% if edit %}edit{% else %}create{% endif %}" method="POST">
       <p>Table: <a href=".">{{ tableName }}</a> (records: {{ schema.count }})</p>
 
       {% if query %}
@@ -19,12 +19,12 @@
                 {% if col.fk %}
                   <select id="{{ name }}-{{ col.name}}" name="{{ col.name }}" {% if col.notnull == 1 %}required{% endif %}>
                     {% for val in col.fk.values %}
-                    <option value="{{ val }}" {% if editRecord and editRecord[col.name] == val %}selected{% endif %}>{{ val }}</option>
+                    <option value="{{ val }}" {% if record and record[col.name] == val %}selected{% endif %}>{{ val }}</option>
                     {% endfor %}
                   <select>
                   <a href="/table/{{ col.fk.table }}">create new</a>
                 {% else %}
-                  <input id="{{ name }}-{{ col.name}}" name="{{ col.name }}" type="text" value="{% if editRecord %}{{ editRecord[col.name] }}{% endif %}" {% if col.notnull == 1 %}required{% endif %}>
+                  <input id="{{ name }}-{{ col.name}}" name="{{ col.name }}" type="text" value="{% if record %}{{ record[col.name] }}{% endif %}" {% if col.notnull == 1 %}required{% endif %}>
                 {% endif %}
               </td>
             </tr>
@@ -33,7 +33,8 @@
         </table>
 
         <div>
-          <input type="submit" value="Save">
+          <input name="more" type="submit" value="Save and next">
+          <input name="save" type="submit" value="Save">
         </div>
       </fieldset>
     </form>
@@ -46,26 +47,52 @@
       {% if data|length > 0 %}
         <form disabled>
           <table id="data-rows">
-            <tr>
-              {% for col, val in data[0] %}
-              <th>{{ col }}</th>
-              {% endfor %}
-              <th>&nbsp;</th>
-              <th>&nbsp;</th>
-            </tr>
+            <thead>
+              <tr>
+                {% for col, val in data[0] %}
+                  {% if col not in data.omit %}
+                    <th>{{ col }}</th>
+                  {% endif %}
+                {% endfor %}
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
 
+            <tbody>
             {% for row in data %}
               <tr>
                 {% for col, val in row %}
-                  <td>{{ val }}</td>
+                  {% if col not in data.omit %}
+                    <td class="
+                      {% if col in data.nowrap %}nowrap{% endif %}
+                      {% if col in data.ellipsed %}ellipsed{% endif %}
+                    ">
+                    {% if col=="username" or col=="password" %}
+                      <input type="password" value="{{ val }}" disabled>
+                    {% elif col=="website" or col=="url" %}
+                      <a href="{{val}}">{{ val }}</a>
+                    {% else %}
+                      {{ val }}
+                    {% endif %}
+                    </td>
+                  {% endif %}
                 {% endfor %}
-                <td><a class="large bare" title="edit" href="./?{{ row.where }} ">🖉</a></td>
-                <td><a class="large bare" title="delete" href="./delete/?{{ row.where }} ">🗑</a></td>
+                <td>
+                  <a class="large bare" title="edit" href="./?{{ row.where }}">🖉</a>
+                  &nbsp;
+                  <a class="large bare" title="delete" href="." data-confirm-href="./delete/?{{ row.where }}">🗑</a>
+                </td>
               </tr>
             {% endfor %}
-          <table>
+            </tbody>
+          </table>
         </form>
       {% endif %}
     </section>
   {% endif %}
+{% endblock %}
+
+{% block scripts %}
+  <script src="/js/delete-records.js" async defer></script>
+  <script src="/js/sort-records.js" async defer></script>
 {% endblock %}
