--- a/public/css/table.css
+++ b/public/css/table.css
@@ -42,6 +42,10 @@ table#data-rows tr td {
   padding: 0 0.5em;
 }
 
+table#data-rows tr:hover td {
+  background: #FF990010;
+}
+
 table + table {
   margin-top: 2em;
 }
